# nooch

./: Cargo.toml  README.md  todo.md
assets/data/char/ken/: data-ref.json  data.json  ken.aseprite  ken.json
src/: assets.rs  debug.rs  game.rs  main.rs  player.rs  world.rs
src/collisions/: mod.rs
src/debug/: editor.rs  mod.rs
src/debug/editor/: hitboxes.rs  hurtboxes.rs  mod.rs  pushboxes.rs
src/drawing/: animation.rs  mod.rs  render.rs
src/imgui/: clipboard.rs  lib.rs  platform.rs  renderer.rs
src/input/: buffer.rs  buttons.rs  config.rs  dashes.rs  mod.rs  motions.rs
src/physics/: mod.rs
src/reactions/: mod.rs
src/state_machine/: context.rs  mod.rs
src/state_machine/states/: mod.rs
src/state_machine/states/common/: crouching.rs  jumping.rs  mod.rs  reacting.rs  standing.rs
src/state_machine/states/custom/: ken.rs  mod.rs
src/state_machine/transitions/: crouch.rs  jump.rs  mod.rs  react.rs  stand.rs
src/utils/: data.rs  loader.rs  math.rs  mod.rs  parsing.rs
