[package]
name = "nooch"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/imgui/lib.rs"

[[bin]]
name = "nooch"
path = "src/main.rs"

[dependencies]
aseprite = "0.1.3"
copypasta = "0.10.1"
flecs_ecs = { version = "0.1.3", features = ["flecs_app", "flecs_rest"] }
# flecs_ecs = { version = "0.1.3", features = ["flecs_app", "flecs_rest"] }
glam = { git = "https://github.com/flakelolz/glam-rs", version = "0.28.0", features = [ "serde" ] }
imgui = "0.12.0"
include_dir = "0.7.4"
raylib = "5.0.1"
serde = { version = "1.0.207", features = ["derive"] }
serde_json = "1.0.124"
